--- a/semana2/ConfigBackend/aula/.eslintrc.json
+++ b/semana2/ConfigBackend/aula/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "es6": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "extends": [
     "airbnb-base",
@@ -29,6 +30,8 @@
     "@typescript-eslint/no-unused-vars": ["error", {
       "argsIgnorePattern": "_"
     }],
+    "@typescript-eslint/interface-name-prefix": ["error", { "prefixWithI": "always" }],
+    "no-useless-constructor": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
